--- a/templates/main_view.html
+++ b/templates/main_view.html
@@ -17,7 +17,7 @@
 	<div id="mainframe" style="margin-top:70px;width:100%;height:100%;">
 		<p align="center">
 			<img src="{% static "image/logo.png" %}">
-			<form method="post" action="/login_check/">
+			<form method="post" action="/chat/">
 				{% csrf_token %}
 				<p align="center">
 					<input type="text" style="height:25px;" id="username" name="username" size="39" 
